# Fresnel

./: .clang-format  .gitmodules  CMakeLists.txt  Readme.md
cmake/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake  FindTBB.cmake  third-party.cmake
include/fl/: config.hpp  di.hpp  fresnel.hpp  stdafx.hpp
include/fl/model/: Animation.hpp  Model.hpp  Texture.hpp
include/fl/render/: DX12Render.hpp  GLRender.hpp  IRender.hpp  VulkanImpl.hpp  VulkanRender.hpp
include/fl/system/: App.hpp  Config.hpp  ModelLoader.hpp  Resource.hpp  TextureLoader.hpp
include/fl/ui/: UIFramework.hpp
include/fl/window/: GLFW_Window.hpp  IWindow.hpp  SDL2_Window.hpp
include/flc/: fresnel.h
samples/IsometricEditor/: CMakeLists.txt  Readme.md
samples/IsometricEditor/src/: main.cpp
samples/ModelLoader/: CMakeLists.txt
src/: CMakeLists.txt
src/render/: DX12Render.cpp  GLFW.cpp  GLRender.cpp  SDL2.cpp  VulkanGLFW.cpp  VulkanImpl.cpp  VulkanImpl.hpp  VulkanRender.cpp  VulkanSDL2.cpp
src/system/: App.cpp  Config.cpp  ModelLoader.cpp  Resource.cpp  TextureLoader.cpp
src/ui/: UIFramework.cpp
src/window/: GLFW_Window.cpp  SDL2_Window.cpp
test/: CMakeLists.txt  test.cpp  test2.cpp
tools/: gen_deps.py
